fix whitespace css

--- a/src/css/calculator.module.css
+++ b/src/css/calculator.module.css
@@ -60,7 +60,7 @@
     padding: 1rem;
   }
   .borrow {
-    white-space: wrap;
+    white-space: normal;
   }
 }
 
